2024-03-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/fastLm.cpp: Export compute functionas fastLm_impl
	* R/fastLm.R: Call generated wrapper fastLm_impl
	* src/init.c: Removed as RcppExports generates its content
	* src/RcppExports.cpp: Regenerated
	* R/RcppExports.R: Idem

2023-01-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.13
        * configure.ac: Idem
        * configure: Idem

	* configure.ac: Remove 'AC_PROG_CC' to appease a CRAN email

2022-10-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.12
	* configure.ac: Idem
	* configure: Idem

	* src/init.c: Add 'void' for proper prototypes pleasing clang-15

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-03-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.11
	* configure.ac: Idem
	* configure: Idem

	* src/Makevars.ucrt: Updated for RTools42

2021-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.10
	* configure.ac: Idem
	* configure: Idem

	* configure.ac: Updated via 'autoupdate' and 'autoreconf
	--warnings=obsolete' to bring to autoconf 2.69 standards
	* configure: Idem

2021-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* inst/tinytest/test_client_package.R: Skip Windows if no LIB_GSL var

2021-06-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.3.9

        * configure: Rebuilt

2021-06-23  Jeroen Ooms  <jeroenooms@gmail.com>

	* tools/winlibs.R: Update to GSL 2.7 and support UCRT build
	* src/Makevars.win: Update to GSL 2.7
	* src/Makevars.ucrt: Support UCRT build

2021-05-20  Dirk Eddelbuettel  <edd@debian.org>